Yubikey-c-client NEWS -- History of user-visible changes.      -*- outline -*-

* Version 2.2 (unreleased)

** Add new API ykclient_set_client_hex to set client key in hex format.

* Version 2.1 (released 2009-03-25)

** Add new API ykclient_get_last_url, mostly for debugging purposes.

** Create signatures on requests.

* Version 2.0 (released 2009-03-25)

** Major rewrite of library.
The library changed name from libyubikey-client.* to libykclient.* and
the header file changed from libykclient.h to ykclient.h.  All
interfaces were also renamed, see ykclient.h.

* Version 1.5 (released 2009-01-13)

** Add libtool -export-symbols-regex to restrict exported symbols.

** Avoid use of asprintf, to make it work under Solaris too.

** Fix memory leaks.

* Version 1.4 (released 2008-09-15)

** Added include paths to make aclocal find libcurl.m4.
Thanks to Oden Eriksson <oeriksson@mandriva.com>.

* Version 1.3 (released 2008-09-15)

** ykclient: Add new API yubikey_client_set_url_template.
Allows setting a private server to query.

* Version 1.2 (released 2008-07-24)

** ykclient: Set exit code as per OTP verification result.
Inspired by discussion in
<http://forum.yubico.com/viewtopic.php?f=3&t=89>.

** Install libykclient.h.

* Version 1.1 (released 2008-06-25)

** Install libykclient.h in $prefix.

* Version 1.0 (released 2008-06-17)

** Initial release, code from yubico-pam.