@@ -33,9 +33,9 @@ AC_CONFIG_MACRO_DIR([m4])
 # Interfaces changed/added/removed:   CURRENT++       REVISION=0
 # Interfaces added:                             AGE++
 # Interfaces removed:                           AGE=0
-AC_SUBST(LT_CURRENT, 2)
+AC_SUBST(LT_CURRENT, 3)
 AC_SUBST(LT_REVISION, 0)
-AC_SUBST(LT_AGE, 1)
+AC_SUBST(LT_AGE, 0)
 
 AM_INIT_AUTOMAKE([-Wall -Werror])
 AC_PROG_CC
