@@ -81,7 +81,6 @@ extern const char *ykclient_get_last_url (ykclient_t *ykc);
 /* One call interface. */
 extern int ykclient_verify_otp (const char *yubikey_otp,
 				unsigned int client_id,
-				size_t keylen,
-				const char *key);
+				const char *hexkey);
 
 #endif
